--- a/public/manifest.json
+++ b/public/manifest.json
@@ -10,7 +10,8 @@
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
-      "js": ["content_script.js"]
+      "js": ["content_script.js"],
+      "all_frames": true
     }
   ]
 }
