--- a/public/manifest.json
+++ b/public/manifest.json
@@ -6,7 +6,12 @@
   "icons": {
     "48": "icon-48.png"
   },
-  "permissions": ["activeTab"],
+  "permissions": ["activeTab", "storage"],
+  "browser_action": {
+    "default_icon": "icon-32.png",
+    "default_title": "Read-aloud controls",
+    "default_popup": "controller.html"
+  },
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
