✨ Introduce Lobe TTS as a new read-aloud driver
- Added `@lobehub/tts` dependency in `package.json` and updated `bun.lockb`.
- Updated `public/controller.html` to add Lobe TTS to the driver selection.
- Granted `speech.platform.bing.com` permission in `public/manifest.json` for Lobe TTS (Edge Speech TTS) functionality.
- Integrated the new driver into the main dispatch logic in `src/read_aloud/index.ts`.
- Implemented the `readSequentially` function for Lobe TTS in `src/read_aloud/lobe_tts_read_aloud.ts`.
- Expanded the `ReadAloudDriver` enum in `src/types.d.ts` to include the new driver.

This provides users with an additional text-to-speech option, leveraging Edge Speech TTS via the LobeHub library, potentially offering different voices or higher quality.

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -6,7 +6,12 @@
   "icons": {
     "48": "icon-48.png"
   },
-  "permissions": ["activeTab", "storage", "*://localhost/*"],
+  "permissions": [
+    "activeTab",
+    "storage",
+    "*://localhost/*",
+    "*://speech.platform.bing.com/*"
+  ],
   "browser_action": {
     "default_icon": "icon-32.png",
     "default_title": "Read-aloud controls",
